2005-10-11  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/darwin/Makefile.am:
	Fix typo (DIST_EXTRA -> EXTRA_DIST)

2005-10-09  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Xext/Makefile.am: 
	Bug #4715 <https://bugs.freedesktop.org/show_bug.cgi?id=4715>
	Add SecurityPolicy to EXTRA_DIST (Bill Crawford)

2005-10-07  Kristian Høgsberg  <krh@redhat.com>

	* Xprint/Makefile.am:
	* Xprint/etc/Makefile.am:
	* Xprint/etc/Xsession.d/Makefile.am:
	* Xprint/etc/init.d/Makefile.am:
	* Xprint/etc/profile.d/Makefile.am:
	* configure.ac:
	Add Xprint init scrips to EXTRA_DIST.

2005-10-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/Makefile.am:
	* hw/darwin/Makefile.am:
	Add darwin to dist

	* hw/xfree86/doc/Makefile.am:
	* hw/xfree86/doc/devel/Makefile.am:
	Include missing docs in EXTRA_DIST

	* hw/xwin/Makefile.am:
	Include headers and other files in dist
	
2005-10-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* xkb/Makefile.am:
	Add README.compiled to dist tarball

2005-10-06  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/dmx/examples/Makefile.am: 
	Don't build "ev" example on systems without <linux/input.h>

2005-10-06  Kristian Høgsberg  <krh@redhat.com>

	* hw/xfree86/parser/Makefile.am: Add cpconfig.c to EXTRA_DIST.
	* hw/xfree86/ramdac/Makefile.am: Add CURSOR.NOTES to EXTRA_DIST.
	* hw/xfree86/scanpci/Makefile.am: Add extrapci.ids to EXTRA_DIST
	and fix xf86PciIds.h rule.

2005-10-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/vfb/Makefile.am:
	Install correct man page and add to dist

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/dmx/Makefile.am:
	* hw/dmx/config/Makefile.am:
	* hw/dmx/doc/Makefile.am:
	* hw/dmx/examples/Makefile.am:
	* hw/dmx/input/Makefile.am:
	Add support for building DMX config and examples programs
	Add missing files to EXTRA_DIST
	Install Xdmx man page

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/xfree86/fbdevhw/Makefile.am: